--- a/package.json
+++ b/package.json
@@ -5,9 +5,25 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^1.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.1",
+    "openai": "^4.14.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
-    "eslint": "^8.16.0"
-  }
+    "eslint": "^8.16.0",
+    "sequelize-cli": "^6.6.1"
+  },
+  "description": "TODO: Change app name in this README, `package.json` and run `npm i` to update `package-lock.json`.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
