backend updates with main functionality

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_USERNAME= coey
    DB_NAME=jobwise_development
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
+OPENAI_API_KEY= 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
