new users table

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# API_AUDIENCE=https://payrollpal/api
-# API_ISSUERBASEURL=https://dev-0cszltrfauqqgkn4.us.auth0.com/
+API_AUDIENCE=https://jobwise/api
+API_ISSUERBASEURL=https://dev-2ed2zc4m0lvucuoz.us.auth0.com/
 DB_USERNAME= coey
   DB_PASSWORD=null
    DB_NAME=jobwise_development
 DB_HOST=127.0.0.1
 DB_DIALECT=postgres
-OPENAI_API_KEY= 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
+OPENAI_API_KEY= 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
